--- a/templates/part/edit.html.twig
+++ b/templates/part/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Part{% endblock %}
+{% block title %}Motorbox - Edition de pièce{% endblock %}
 
 {% block body %}
     <h1>Editer pièce</h1>
