--- a/templates/part/index.html.twig
+++ b/templates/part/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Part index{% endblock %}
+{% block title %}Motorbox - Pièces{% endblock %}
 
 {% block body %}
     <section class="nameMotor">
