--- a/templates/part/new.html.twig
+++ b/templates/part/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Part{% endblock %}
+{% block title %}Motorbox - Nouvelle pièce{% endblock %}
 
 {% block body %}
     <h1>Créer une nouvelle pièce</h1>
