--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Vehicle index{% endblock %}
+{% block title %}Index Véhicule{% endblock %}
 
 {% block body %}
     <section class="container-column vehicleList">
