--- a/templates/vehicle/parts_edit.html.twig
+++ b/templates/vehicle/parts_edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier {{ part.name }}{% endblock %}
+{% block title %}Motorbox - Modifier {{ part.name }}{% endblock %}
 
 {% block body %}
 
