--- a/templates/part/_delete_form.html.twig
+++ b/templates/part/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('part_delete', {'id': part.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ part.id) }}">
-    <button class="button">Delete</button>
+    <button class="button">Supprimer</button>
 </form>
