--- a/templates/part/show.html.twig
+++ b/templates/part/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Part{% endblock %}
+{% block title %}Motorbox - Pièce{% endblock %}
 
 {% block body %}
     <h1>Pièces</h1>
@@ -8,11 +8,11 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ part.name }}</td>
             </tr>
             <tr>
-                <th>Lifespan</th>
+                <th>Durée de vie</th>
                 <td>{{ part.lifespan }}</td>
             </tr>
         </tbody>
@@ -20,7 +20,7 @@
 
     <a href="{{ path('part_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('part_edit', {'id': part.id}) }}">edit</a>
+    <a href="{{ path('part_edit', {'id': part.id}) }}">éditer</a>
 
     {{ include('part/_delete_form.html.twig') }}
 {% endblock %}
