--- a/templates/vehicle/new.html.twig
+++ b/templates/vehicle/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Vehicle{% endblock %}
+{% block title %}Motorbox - Nouveau véhicule{% endblock %}
 
 {% block body %}
         <div class="flex text-align-center container-column">
