--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Part index{% endblock %}
+{% block title %}Motorbox - Part index{% endblock %}
 
 {% block body %}
 
