--- a/templates/vehicle/parts_show.html.twig
+++ b/templates/vehicle/parts_show.html.twig
@@ -1,18 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Part{% endblock %}
+{% block title %}Motorbox - Pièces{% endblock %}
 
 {% block body %}
-    <h1>Part</h1>
+    <h1>Pièce</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ part.name }}</td>
             </tr>
             <tr>
-                <th>Lifespan</th>
+                <th>Durée de vie</th>
                 <td>{{ part.lifespan }}</td>
             </tr>
         </tbody>
@@ -20,7 +20,7 @@
 
     <a class="button" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
 
-    <a class="button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">edit</a>
+    <a class="button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">éditer</a>
 
     {{ include('vehicle/_delete_parts_form.html.twig') }}
 {% endblock %}
