--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Vehicle{% endblock %}
+{% block title %}Motorbox - Vehicle{% endblock %}
 
 {% block body %}
     <h1>Vehicle</h1>
@@ -12,23 +12,23 @@
                 <td>{{ vehicle.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ vehicle.name }}</td>
             </tr>
             <tr>
-                <th>Brand</th>
+                <th>Marque</th>
                 <td>{{ vehicle.brand }}</td>
             </tr>
             <tr>
-                <th>Model</th>
+                <th>Modèle</th>
                 <td>{{ vehicle.model }}</td>
             </tr>
             <tr>
-                <th>ProductYear</th>
+                <th>Année de production</th>
                 <td>{{ vehicle.productYear }}</td>
             </tr>
             <tr>
-                <th>UsedHour</th>
+                <th>Temps d'utilisation</th>
                 <td>{{ vehicle.usedHour }}</td>
             </tr>
             <tr>
@@ -40,7 +40,7 @@
 
     <a class="button" href="{{ path('vehicle_index') }}">Retour à la liste</a>
 
-    <a class="button" href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
+    <a class="button" href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">éditer</a>
 
     {{ include('vehicle/_delete_form.html.twig') }}
     {% include "_navbar.html.twig" %}
