--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -64,6 +64,24 @@ body {
     box-shadow: $color-blue-light 3px 5px 8px;
 }
 
+// button  for "return to list"
+#button-list {
+    text-decoration: none;
+    text-align: center;
+    font-size: 0.9em;
+    margin: 2rem;
+    padding: 2rem;
+    border-radius: 100px;
+    background-color: $color-blue;
+    border: 2px solid $color-3;
+    opacity: 0.8;
+    color: $color-body;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    box-shadow: $color-blue-light 3px 5px 8px;
+}
+
+
 .title {
     margin-bottom: 2rem;
     margin-top: 1rem;
