--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -9,7 +9,7 @@
 
         {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-        <a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
+        <a id="button-list" href="{{ path('vehicle_index') }}">Retourner à la liste</a>
 
         {{ include('vehicle/_delete_form.html.twig') }}
     </div>
