--- a/templates/part/_form.html.twig
+++ b/templates/part/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {attr: {id: "part_form"}}) }}
 
 <div class="flex container-column container-form-part">
     {{ form_widget(form.name, {
@@ -14,5 +14,4 @@
         }
     }) }}<br>
 </div>
-    <button class="button">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
