--- a/templates/vehicle/_delete_parts_form.html.twig
+++ b/templates/vehicle/_delete_parts_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer {{ part.name }} ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ part.id) }}">
-    <button class="button">Supprimer</button>
+    <button class="button danger">Supprimer</button>
 </form>
