--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -3,13 +3,12 @@
 {% block title %}New Part{% endblock %}
 
 {% block body %}
+    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
     <div class="text-align-center">
         <h1 class="title-form">Créer une nouvelle pièce</h1>
 
         {{ include('part/_form.html.twig') }}
-
-        <a class="link-style" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
-
+        <button type="submit" form="part_form" class="button">Sauvegarder</button>
     </div>
 
     <div class="navbar-container">
