--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -91,7 +91,6 @@ label {
     justify-content: space-evenly;
     align-items: center;
     bottom: 0;
-    opacity: 0.8;
     width: 100vw;
     height: 10%;
     border-top-left-radius: 15%; 
@@ -111,11 +110,11 @@ label {
 .drop-container {
     position: absolute;
     bottom: 100%;
-    font-size: 2.5rem;
+    font-size: 1.7rem;
     background: $color-body;
     width: 100vw;
     padding: 1rem;
-
+    height: 40vh;
     clip-path: circle(0px at 80% 110%);
     -webkit-clip-path: circle(0px at 80% 110%);
     transition: all 1s ease-in;
@@ -123,10 +122,22 @@ label {
     ul {
         list-style: none;
     }
+
+    li:first-child {
+        margin-top: 2.5rem;
+    }
+
+    li {
+        margin-bottom: 1rem;
+    }
+
+    a {
+        text-decoration: none;
+    }
 }
 
 .drop-container.open {
-    clip-path: circle(200% at 50% 50%);
+    clip-path: circle(100% at 50% 50%);
     -webkit-clip-path: circle(200% at 50% 50%);
 }
 
@@ -142,10 +153,6 @@ label {
 
 // END NAVBAR
 // START LOGO
-.logo-container {
-    margin-bottom: 2rem;
-}
-
 .logo {
     width: 100%;
 }
