--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -31,6 +31,12 @@ body {
     flex-direction: column;
 }
 
+.container-column-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .space-between {
     display: flex;
     justify-content: space-between;
