--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -4,14 +4,12 @@
 
 {% block body %}
 
+    <a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
+
     <div class="text-align-center">
         <h1 class="title-form">Modifier {{ vehicle.name }}</h1>
-
-        {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
-
-        <a id="button-list" href="{{ path('vehicle_index') }}">Retourner à la liste</a>
-
-        {{ include('vehicle/_delete_form.html.twig') }}
     </div>
+    
+        {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
     {% include "_navbar.html.twig" %}
 {% endblock %}
