--- a/templates/vehicle/new.html.twig
+++ b/templates/vehicle/new.html.twig
@@ -3,10 +3,10 @@
 {% block title %}New Vehicle{% endblock %}
 
 {% block body %}
+        <a href="{{ path('vehicle_index') }}">Retour à la liste</a>
         <div class="flex text-align-center container-column">
             <h1 class="title">Créer un nouveau véhicule</h1>
             {{ include('vehicle/_form.html.twig') }}
-            <a class="button" href="{{ path('vehicle_index') }}">Retour à la liste</a>
         </div>
     {% include "_navbar.html.twig" %}
 
