--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -40,8 +40,9 @@
 
     <a class="button" href="{{ path('vehicle_index') }}">Retour à la liste</a>
 
-    <a class="button" href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
-
-    {{ include('vehicle/_delete_form.html.twig') }}
+    <div class="button-bar">
+        {{ include('vehicle/_delete_form.html.twig') }}
+        <a class="button" href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
+    </div>
     {% include "_navbar.html.twig" %}
 {% endblock %}
