--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -12,7 +12,7 @@
                 <li><a href="#">CGV</a></li>
                 <li><a href="#">Contactez-nous</a></li>
                 {% if app.user %}
-                    <li><a href="/logout">Déconnection</a></li>
+                    <li><a href="/logout">Déconnexion</a></li>
                 {% endif %}
             </ul>
         </div>
