--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -35,6 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 
 .register-form {
     text-align: right;
@@ -301,4 +302,5 @@ label {
 .fa-cog {
     color: $black;
 }
+
 // END FONT AWESOME ICONS
