--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
+    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retourner à la liste</a>
 
     <div class="text-align-center">
         <h1 class="title-form">Modifier {{ vehicle.name }}</h1>
