--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -35,6 +35,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
 }
 
 .register-form {
@@ -62,7 +63,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: end;
-    align-items: center;
+    align-items: end;
     padding: 1rem;
 
     & > * + * {
