--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -6,11 +6,12 @@
 
 {% block body %}
 
-    <a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
+	<a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
 
-    <div class="text-align-center">
-        <h1 class="title-form">Modifier {{ vehicle.name }}</h1>
-    </div>
-    {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
-    {% include "_navbar.html.twig" %}
+	<div class="text-align-center">
+		<h1 class="title-form">Modifier
+			{{ vehicle.name }}</h1>
+	</div>
+	{{ include('vehicle/_form.html.twig', {'button_label': 'Modifier', 'showDeleteForm': true}) }}
+	{% include "_navbar.html.twig" %}
 {% endblock %}
