--- a/templates/vehicle/_form.html.twig
+++ b/templates/vehicle/_form.html.twig
@@ -45,6 +45,6 @@
     </div>
     <div class="button-bar">
         {{ include('vehicle/_delete_form.html.twig') }}
-        <button class="button">{{ button_label|default('Sauvegarder') }}</button>
+        <button class="button form-button">{{ button_label|default('Sauvegarder') }}</button>
     </div>
 </div>
