--- a/templates/vehicle/parts_edit.html.twig
+++ b/templates/vehicle/parts_edit.html.twig
@@ -12,7 +12,7 @@
 
         <div class="button-bar">
             {{ include('vehicle/_delete_parts_form.html.twig') }}
-            <button type="submit" form="part_form" class="button">Modifier</button>
+            <button type="submit" form="part_form" class="button form-button">Modifier</button>
         </div>
     </div>
     <div class="navbar-container">
