--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -61,7 +61,7 @@ body {
 .button-bar {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     padding: 1rem;
 
@@ -87,6 +87,21 @@ body {
     &.danger {
         background-color: $color-danger;
     }
+}
+
+.button-login {
+    text-decoration: none;
+    text-align: center;
+    padding: .5rem 1rem;
+    margin:1rem;
+    border-radius: 100px;
+    background-color: $color-blue;
+    border: 2px solid $color-3;
+    opacity: 0.8;
+    color: $color-body;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    box-shadow: $color-blue-light 3px 5px 8px;
 }
 
 .title {
@@ -196,6 +211,11 @@ label {
 
 // END LOGIN
 // START REGISTER
+
+.container-column-center button {
+    margin-top: 2rem;
+}
+
 // END REGISTER
 // START INDEX VEHICLE
 
