--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<div class="flex text-align-center container-column">
+
+	<div class="container-column-center">
 
 		{% include "_logo.html.twig" %}
 		<h1>Inscription</h1>
@@ -25,9 +26,8 @@
 		{{ form_row(registrationForm.agreeTerms, {
                 label: 'Accepter les conditions'
             }) }}
-		<button type="submit" class="button">Valider</button>
 		{{ form_end(registrationForm) }}
-
+		<button type="submit" class="button">Valider</button>
 	</div>
 
 {% endblock %}
