--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -92,8 +92,8 @@ body {
 .button-login {
     text-decoration: none;
     text-align: center;
-    padding: .5rem 1rem;
-    margin:1rem;
+    padding: 2rem;
+    margin:2rem;
     border-radius: 100px;
     background-color: $color-blue;
     border: 2px solid $color-3;
