re-added condition for redirection of home icon on navbar

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,6 +1,10 @@
 <div class="navbar-container">
     <div class="navbar">
-        <a class="" href="{{ path('vehicle_index') }}"><i class="fas fa-home"></i></a>
+        {% if app.user %}
+            <a class="" href="{{ path('vehicle_index') }}"><i class="fas fa-home"></i></a>
+        {% else %}
+            <a class="" href="{{ path('home') }}"><i class="fas fa-home"></i></a>
+        {% endif %}
         <img src="{{ asset('build/images/Motorboxcf.png') }}">
         <div class="hamburger">
             <i class="fas fa-bars"></i>
