--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -11,23 +11,22 @@
 		<h1>Inscription</h1>
 		<div class="register-form">
 			{{ form_start(registrationForm) }}
-			{{ form_row(registrationForm.email, {
-            attr: {
-                    placeholder: 'Email'
-                }
-            }) }}
-			{{ form_row(registrationForm.password, {
-                label: 'Mot de passe',
-                attr: {placeholder: 'Mot de passe'}
-            }) }}
+				{{ form_row(registrationForm.email, {
+					label: ' ',
+					attr: {
+						placeholder: 'Email'
+					}
+				}) }}
+				{{ form_row(registrationForm.password, {
+					attr: {placeholder: 'Mot de passe'}
+				}) }}
 
+				{{ form_row(registrationForm.agreeTerms, {
+					label: 'Accepter les conditions'
+				}) }}
+				<button type="submit" class="button">Valider</button>
+			{{ form_end(registrationForm) }}
 		</div>
-
-		{{ form_row(registrationForm.agreeTerms, {
-                label: 'Accepter les conditions'
-            }) }}
-		{{ form_end(registrationForm) }}
-		<button type="submit" class="button">Valider</button>
 	</div>
 
 {% endblock %}
