added class button-form for userController page

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -16,10 +16,10 @@
 		{% include "_logo.html.twig" %}
 
 		<section class="flex container-column">
-			<a class="button-login" href="{{ path('app_register') }}">
+			<a class="button button-login" href="{{ path('app_register') }}">
 				S'inscrire
 			</a>
-			<a class="button-login" href="{{ path('login') }}">
+			<a class="button button-login" href="{{ path('login') }}">
 				Se connecter
 			</a>
 		</section>
