--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -18,7 +18,7 @@
                         <input type="password" id="password" name="_password" placeholder="Mot de passe"/>
                     </div>
                     <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
-                    <button class="button" type="submit">Valider</button>
+                    <button class="button button-login" type="submit">Valider</button>
                 </form>
             </div>
         </div>
