--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -24,7 +24,7 @@
 				{{ form_row(registrationForm.agreeTerms, {
 					label: 'Accepter les conditions'
 				}) }}
-				<button type="submit" class="button">Valider</button>
+				<button type="submit" class="button button-login">Valider</button>
 			{{ form_end(registrationForm) }}
 		</div>
 	</div>
