--- a/templates/_logo.html.twig
+++ b/templates/_logo.html.twig
@@ -1,3 +1,3 @@
-<div class="text-align-center logo-container">
+<div class="text-align-center">
     <img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
 </div>
