--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -5,22 +5,18 @@
 
 {% block body %}
 
+{% include "_logo.html.twig" %}
 	<div class="container-column-center">
 
-		{% include "_logo.html.twig" %}
 		<h1>Inscription</h1>
 		<div class="register-form">
 			{{ form_start(registrationForm) }}
-				{{ form_row(registrationForm.email, {
-					label: ' ',
-					attr: {
-						placeholder: 'Email'
-					}
+				{{ form_widget(registrationForm.email, {
+					attr: {placeholder: 'E-mail'}
 				}) }}
-				{{ form_row(registrationForm.password, {
+				{{ form_widget(registrationForm.password, {
 					attr: {placeholder: 'Mot de passe'}
 				}) }}
-
 				{{ form_row(registrationForm.agreeTerms, {
 					label: 'Accepter les conditions'
 				}) }}
