--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -207,18 +207,26 @@ label {
 
 // END LOGIN
 // START REGISTER
-
-.container-column-center button {
-    margin-top: 2rem;
-}
-
-.register-form {
-    text-align: right;
-    margin-right: 2rem;
-}
-
 // END REGISTER
 // START FORM
+.form-container {
+    width: 70vw;
+    margin: 0 auto;
+    text-align: center;
+    h1 {
+        font-size: 2.5rem;
+        margin-bottom: 1rem;
+    }
+
+    form {
+        input {
+            padding: 0.5rem;
+            font-size: 1rem;;
+            margin-bottom: 1rem;
+        }
+
+    }
+}
 .container-form-part {
     align-items: center;
 }
