--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,28 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription
-{% endblock %}
+{% block title %}{{ parent() }} - Inscription{% endblock %}
 
 {% block body %}
-
-{% include "_logo.html.twig" %}
-	<div class="container-column-center">
-
+	{% include "_logo.html.twig" %}
+	<div class="form-container">
 		<h1>Inscription</h1>
-		<div class="register-form">
-			{{ form_start(registrationForm) }}
-				{{ form_widget(registrationForm.email, {
-					attr: {placeholder: 'E-mail'}
-				}) }}
-				{{ form_widget(registrationForm.password, {
-					attr: {placeholder: 'Mot de passe'}
-				}) }}
-				{{ form_row(registrationForm.agreeTerms, {
-					label: 'Accepter les conditions'
-				}) }}
-				<button type="submit" class="button button-login">Valider</button>
-			{{ form_end(registrationForm) }}
-		</div>
+		{{ form_start(registrationForm, {
+			attr: {id: 'register_form'}
+		}) }}
+			{{ form_widget(registrationForm.email, {
+				attr: {placeholder: 'E-mail'}
+			}) }}
+			{{ form_widget(registrationForm.password, {
+				attr: {placeholder: 'Mot de passe'}
+			}) }}
+			{{ form_row(registrationForm.agreeTerms, {
+				label: 'Accepter les conditions'
+			}) }}
+		{{ form_end(registrationForm) }}
+		<button type="submit" form="register_form" class="button button-login">Valider</button>
 	</div>
-
 {% endblock %}
