--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -223,6 +223,7 @@ label {
             padding: 0.5rem;
             font-size: 1rem;;
             margin-bottom: 1rem;
+            text-align: center;
         }
 
     }
