--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -1,26 +1,23 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }} - Connexion{% endblock %}
+
 {% block body %}
-    <div class="flex container-column">
-
-        {% include "_logo.html.twig" %}
-
-        <div class="container-column-center">
-            {% if error %}
-                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
-            <div class="register-form">
-                <form action="{{ path('login') }}" method="post">
-                    <div>
-                        <input type="text" id="username" name="_username" placeholder="Email"value="{{ last_username }}"/>
-                    </div>
-                    <div>
-                        <input type="password" id="password" name="_password" placeholder="Mot de passe"/>
-                    </div>
-                    <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
-                    <button class="button button-login" type="submit">Valider</button>
-                </form>
+    {% include "_logo.html.twig" %}
+    <div class="form-container">
+        <h1>Connexion</h1>
+        {% if error %}
+            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <form action="{{ path('login') }}" method="post" id="login_form">
+            <div>
+                <input type="text" id="username" name="_username" placeholder="Email"value="{{ last_username }}"/>
             </div>
-        </div>
+            <div>
+                <input type="password" id="password" name="_password" placeholder="Mot de passe"/>
+            </div>
+            <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
+        </form>
+        <button class="button button-login" type="submit" form="login_form">Valider</button>
     </div>
 {% endblock %}
