--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -9,15 +9,21 @@
 		{{ form_start(registrationForm, {
 			attr: {id: 'register_form'}
 		}) }}
-			{{ form_widget(registrationForm.email, {
-				attr: {placeholder: 'E-mail'}
-			}) }}
-			{{ form_widget(registrationForm.password, {
-				attr: {placeholder: 'Mot de passe'}
-			}) }}
-			{{ form_row(registrationForm.agreeTerms, {
-				label: 'Accepter les conditions'
-			}) }}
+			<div>
+				{{ form_widget(registrationForm.email, {
+					attr: {placeholder: 'E-mail'}
+				}) }}
+			</div>
+			<div>
+				{{ form_widget(registrationForm.password, {
+					attr: {placeholder: 'Mot de passe'}
+				}) }}
+			</div>
+			<div>
+				{{ form_row(registrationForm.agreeTerms, {
+					label: 'Accepter les conditions'
+				}) }}
+			</div>
 		{{ form_end(registrationForm) }}
 		<button type="submit" form="register_form" class="button button-login">Valider</button>
 	</div>
