--- a/templates/vehicle/new.html.twig
+++ b/templates/vehicle/new.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Motorbox - Nouveau véhicule
-{% endblock %}
+{% block title %}{{ parent() }} - Nouveau véhicule{% endblock %}
 
 {% block body %}
 	<a href="{{ path('vehicle_index') }}">Retour à la liste</a>
-	<div class="flex text-align-center container-column">
-		<h1 class="title">Créer un nouveau véhicule</h1>
-		{{ include('vehicle/_form.html.twig', {'showDeleteForm': false}) }}
-	</div>
-
+	<div class="text-align-center"><h1 class="title">Créer un nouveau véhicule</h1></div>
+	{{ include('vehicle/_form.html.twig', {'showDeleteForm': false}) }}
 {% endblock %}
