--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Part{% endblock %}
+{% block title %}{{ parent() }} - Nouvelle pièce{% endblock %}
 
 {% block body %}
     <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
-    <div class="text-align-center">
-        <h1 class="title-form">Créer une nouvelle pièce</h1>
-
-        {{ include('part/_form.html.twig') }}
-        <button type="submit" form="part_form" class="button">Sauvegarder</button>
-    </div>
+    <div class="text-align-center"><h1 class="title">Créer une nouvelle pièce</h1></div>
+    {{ include('vehicle/_parts_form.html.twig', {'showDeleteForm': false}) }}
 {% endblock %}
