--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -1,17 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier
-	{{ vehicle.name }}
-{% endblock %}
+{% block title %}{{ parent() }} - Modifier {{ vehicle.name }}{% endblock %}
 
 {% block body %}
-
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retourner à la liste</a>
-
-	<div class="text-align-center">
-		<h1 class="title-form">Modifier
-			{{ vehicle.name }}</h1>
-	</div>
+    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+	<div class="text-align-center"><h1 class="title">Modifier {{ vehicle.name }}</h1></div>
 	{{ include('vehicle/_form.html.twig', {'button_label': 'Modifier', 'showDeleteForm': true}) }}
-	{% include "_navbar.html.twig" %}
 {% endblock %}
