--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,6 +29,7 @@ body {
 
 .container-column {
     flex-direction: column;
+    align-items: center;
 }
 
 .container-column-center {
@@ -88,6 +89,13 @@ body {
     &.danger {
         background-color: $color-danger;
     }
+}
+
+.cards {
+    margin-top: 2rem;
+    border-radius: 30px;
+    width: 90%;
+    background: linear-gradient($color-blue, $color-2);
 }
 
 .title {
