added a logo in replacement of the old 'Retour à la liste'button

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -96,6 +96,11 @@ label {
     margin-right: 10px;;
 }
 
+.return {
+    max-width: 10vw;
+    margin-left: 1rem;
+}
+
 // END BASE
 // START NAVBAR
 .navbar {
