--- a/templates/part/show.html.twig
+++ b/templates/part/show.html.twig
@@ -18,7 +18,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('part_index') }}">Retour à la liste</a>
+    <a href="{{ path('part_index') }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
 
     <a href="{{ path('part_edit', {'id': part.id}) }}">éditer</a>
 
