--- a/templates/part/edit.html.twig
+++ b/templates/part/edit.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Motorbox - Edition de pièce{% endblock %}
 
 {% block body %}
-    <a href="{{ path('part_index') }}">Retour à la liste</a>
+        <a href="{{ path('part_index') }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
+
 
     <h1>Editer pièce</h1>
 
