--- a/templates/part/new.html.twig
+++ b/templates/part/new.html.twig
@@ -8,5 +8,5 @@
     {{ include('part/_form.html.twig') }}
     <button type="submit" form="part_form" class="button">Sauvegarder</button>
 
-    <a href="{{ path('part_index') }}">Retour à la liste</a>
+    <a href="{{ path('part_index') }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
 {% endblock %}
