--- a/templates/vehicle/parts_edit.html.twig
+++ b/templates/vehicle/parts_edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent() }} - Modifier {{ part.name }}{% endblock %}
 
 {% block body %}
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
     <div class="text-align-center"><h1 class="title">Modifier {{ part.name }}</h1></div>
     {{ include('vehicle/_parts_form.html.twig', {'button_label': 'Modifier', 'showDeleteForm': true}) }}
 {% endblock %}
