--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent() }} - Nouvelle pièce{% endblock %}
 
 {% block body %}
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
     <div class="text-align-center"><h1 class="title">Créer une nouvelle pièce</h1></div>
     {{ include('vehicle/_parts_form.html.twig', {'showDeleteForm': false}) }}
 {% endblock %}
