--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a class="button" href="{{ path('vehicle_index') }}">Retour à la liste</a>
+    <a class="button" href="{{ path('vehicle_index') }}"><img class="return" src="{{ asset('build/images/return.svg') }}"></img></a>
 
     <div class="button-bar">
         {{ include('vehicle/_delete_form.html.twig') }}
