--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Index Véhicule{% endblock %}
 
 {% block body %}
-    <section class="container-column vehicleList">
+    <section class="container-column align-items-center vehicleList">
         <div class="addVehicle" >
             <a href="{{ path('vehicle_new') }}"><img src="{{ asset('build/images/icons8.svg') }}"></img></a>
         </div>
@@ -11,5 +11,4 @@
             <a class="button cards" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
     </section>
-
 {% endblock %}
