changed title of vehicules template

--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Index Véhicule{% endblock %}
+{% block title %}{{ parent() }} - Véhicules{% endblock %}
 
 {% block body %}
     <section class="container-column align-items-center vehicleList">
