add max for part lifespan in part page

--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -34,13 +34,17 @@
                 </div>
                 <div class="progress-element">
                     <div class="progress-label">
-                        <p>{{ vehicle.usedHour - part.partUseTime }}h</p>
-                        <p>{{ part.lifespan }}h</p>
+                        <p>{{ vehicle.usedHour - part.partUseTime }}h
+                   
+                    </p>
+                        <p>max {{ part.lifespan }}h</p>
                     </div>
-                        <div class="progress-container">
+
+
+                    <div class="progress-container">
                         <progress class="progress-part" value = "{{ vehicle.usedHour - part.partUseTime }}" max = "{{ part.lifespan }}"></progress>
                         <input class="part-input" type="checkbox" name="my-checkbox" id="{{ part.id }}">
-                        </div>
+                    </div>
                 </div>
             </div>
             <hr>
