reduce fontweight for p in progress-part

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -298,6 +298,11 @@ label {
     display: flex;
     justify-content: space-between;
     margin-right: 1rem;
+
+    p {
+        font-weight: 400;
+    }
+
 }
 
 .container-parts {
