--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -14,8 +14,8 @@ body {
     font-size: x-large;
     font-weight: 600;
     min-height: 100vh;
-    background: $color-body;
-    color: $color-1;
+    background: $secondary-color;
+    color: $font-color;
 }
 
 .text-align-center {
@@ -49,7 +49,7 @@ body {
 
 .link-style {
     text-decoration: none;
-    color: #6a6b6c;
+    color: $font-color;
 }
 
 .button-bar {
@@ -72,10 +72,10 @@ body {
     margin: 2rem;
     padding: .5rem 1rem;
     border-radius: 100px;
-    background-color: $color-blue;
-    border: 2px solid $color-3;
+    background-color: $primary-color;
+    border: 2px solid $tertiary-color;
     opacity: 0.8;
-    color: $color-body;
+    color: $secondary-color;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     box-shadow: $color-blue-light 3px 5px 8px;
@@ -110,7 +110,7 @@ label {
 .navbar {
     position: fixed;
     display: flex;
-    background-color: $color-3;
+    background-color: $tertiary-color;
     font-size: 1em;
     text-align: center;
     justify-content: space-evenly;
@@ -120,7 +120,7 @@ label {
     height: 10%;
     border-top-left-radius: 15%; 
     border-top-right-radius: 15%;
-    border-top: 1px solid $color-2; 
+    border-top: 1px solid $secondary-color-logo; 
 }
 
 .navbar img {
@@ -136,7 +136,7 @@ label {
     position: absolute;
     bottom: 100%;
     font-size: 1.7rem;
-    background: $color-body;
+    background: $secondary-color;
     width: 100vw;
     padding: 1rem;
     height: 50vh;
@@ -168,12 +168,12 @@ label {
 }
 
 .fa-home {
-    color: $color-2;
+    color: $secondary-color-logo;
     font-size: 3rem;
 }
 
 .fa-bars {
-    color: $color-2;
+    color: $secondary-color-logo;
     font-size: 3rem;
 }
 
@@ -238,7 +238,7 @@ label {
     margin-top: 2rem;
     border-radius: 30px;
     width: 90%;
-    background: linear-gradient($color-blue, $color-2);
+    background: linear-gradient($primary-color, lighten( $primary-color, 20% ));
 }
 
 // END INDEX VEHICLE
@@ -280,12 +280,12 @@ label {
 }
 
 ::-moz-progress-bar {
-    background: linear-gradient(45deg, #295c9e, #052783);
+    background: linear-gradient(45deg, lighten( $primary-color, 20% ), $primary-color);
     border-radius: 20px;
 }
 
 ::-webkit-progress-value {
-    background: linear-gradient(45deg, #295c9e, #052783);
+    background: linear-gradient(45deg, lighten( $primary-color, 20% ), $primary-color);
     border-radius: 20px;
 }
 
@@ -315,7 +315,7 @@ label {
 }
 
 .sub-title {
-    background-color: $color-blue;
+    background-color: $primary-color;
     color: $white;
     border-radius: 3px;
     font-size: 1rem;
