--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -3,17 +3,11 @@
 {% block title %}Motorbox - Part index{% endblock %}
 
 {% block body %}
-
     <section>
         <div class="container-vehicle flex">
             <div>
-                <h1>
-                    {{ vehicle.model }}<br>
-                </h1>
-                <h2>
-                    {{ vehicle.brand }}
-                    {{ vehicle.name }}
-                </h2>
+                <h1>{{ vehicle.model }}</h1>
+                <h2>{{ vehicle.brand }} {{ vehicle.name }}</h2>
             </div>
             <div class= "container-fa-button">
                 <a class="link-fa-edit" href ="{{ path('vehicle_edit', {id: vehicle.id}) }}">
@@ -21,34 +15,33 @@
                 </a>
             </div>
         </div>
-
         <h2 class="sub-title">Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
         <div class="container-parts">
             {% for part in vehicle.parts %}
-            <div class="container-part">
-                <div class="space-between">
-                    <label for="{{ part.id }}">{{ part.name }}</label>
+                <div class="container-part">
+                    <div class="space-between">
+                        <label for="{{ part.id }}">{{ part.name }}</label>
                         <div class="flex icons-button">
                             <a href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><i class="fas fa-cog"></i></a>
                         </div>
-                </div>
-                <div class="progress-element">
-                    <div class="progress-label">
-                        <p>{{ vehicle.usedHour - part.partUseTime }}h
-                            {% if vehicle.usedHour - part.partUseTime >= part.lifespan %}
-                                <i class="fas fa-exclamation-circle"></i>
-                            {% endif %}
-                        </p>
-                        <p>max {{ part.lifespan }}h</p>
                     </div>
-
-                    <div class="progress-container">
-                        <progress class="progress-part" value = "{{ vehicle.usedHour - part.partUseTime }}" max = "{{ part.lifespan }}"></progress>
-                        <input class="part-input" type="checkbox" name="my-checkbox" id="{{ part.id }}">
+                    <div class="progress-element">
+                        <div class="progress-label">
+                            <p>
+                                {{ vehicle.usedHour - part.partUseTime }}h
+                                {% if vehicle.usedHour - part.partUseTime >= part.lifespan %}
+                                    <i class="fas fa-exclamation-circle"></i>
+                                {% endif %}
+                            </p>
+                            <p>max {{ part.lifespan }}h</p>
+                        </div>
+                        <div class="progress-container">
+                            <progress class="progress-part" value = "{{ vehicle.usedHour - part.partUseTime }}" max = "{{ part.lifespan }}"></progress>
+                            <input class="part-input" type="checkbox" name="my-checkbox" id="{{ part.id }}">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <hr>
+                <hr>
             {% endfor %}
         </div>
         <div class="text-align-center">
