--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -3,12 +3,15 @@
 {% block title %}{{ parent() }} - Véhicules{% endblock %}
 
 {% block body %}
-    <section class="container-column align-items-center vehicleList">
+    <div class="container-column align-items-center vehicleList">
         <div class="addVehicle" >
             <a href="{{ path('vehicle_new') }}"><img src="{{ asset('build/images/icons8.svg') }}"></img></a>
         </div>
         {% for vehicle in user.vehicles %}
-            <a class="button cards" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
+            <a class="button cards" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" >
+                <p>{{ vehicle.name }}</p>
+                <p>{{ vehicle.brand }} {{ vehicle.model }}</p>
+            </a>
         {% endfor %}
-    </section>
+    </div>
 {% endblock %}
