--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -6,8 +6,8 @@
     <section>
         <div class="container-vehicle flex">
             <div>
-                <h1>{{ vehicle.model }}</h1>
-                <h2>{{ vehicle.brand }} {{ vehicle.name }}</h2>
+                <h1>{{ vehicle.brand }} {{ vehicle.model }}</h1>
+                <h2>{{ vehicle.name }}</h2>
             </div>
             <div class= "container-fa-button">
                 <a class="link-fa-edit" href ="{{ path('vehicle_edit', {id: vehicle.id}) }}">
