--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -44,8 +44,8 @@
                 <hr>
             {% endfor %}
         </div>
-        <div class="text-align-center">
-            <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
+        <div class="addPart" >
+            <a href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}"><img src="{{ asset('build/images/icons8.png') }}"></img></a>
         </div>
     </section>
 {% endblock %}
